update movie